Revert "Fix left/right aligned blocks height and spacing"
This reverts commit 04fd3f6c1bb76ead8a055dfe062e8e534bbb718d.

--- a/src/wp-content/themes/twentynineteen/style-editor.scss
+++ b/src/wp-content/themes/twentynineteen/style-editor.scss
@@ -20,14 +20,6 @@ body {
 	}
 
 	.wp-block[data-align="left"],
-	.wp-block.alignleft,
-	.wp-block[data-align="right"],
-	.wp-block.alignright {
-		height: auto;
-		overflow: auto;
-	}
-
-	.wp-block[data-align="left"],
 	.wp-block.alignleft {
 		margin-right: $size__spacing-unit;
 		width: inherit;
